[package]
name = "http-proxy-server"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
cached = "0.42.0"
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.19", features = ["std", "macros"] }
tokio = { version = "1.24.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "fs",
    "io-util",
    "time",
    "macros",
] }
tokio-openssl = "0.6.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "local-time"] }
